Fix wrapping

--- a/src/assets/css/global/layout.scss
+++ b/src/assets/css/global/layout.scss
@@ -48,7 +48,6 @@
 
   >* {
     flex-basis: calc(50% - 24px); // effectively 16px margin 
-    flex-shrink: 0;
     flex-grow: 0;
   }
 }
